# mikrotik-model

./: .gitignore  Cargo.toml  build.rs
examples/: edit_ethernet_interface.rs  edit_name.rs  init_config.rs  list_wireless_stats.rs  playground.rs  setup_ap.rs  simple.rs  test_macro.rs
inspect-device/: Cargo.toml
inspect-device/src/: main.rs
mikrotik-model-generator/: Cargo.toml
mikrotik-model-generator-macro/: Cargo.toml
mikrotik-model-generator-macro/src/: lib.rs
mikrotik-model-generator/ros_model/: bridge.txt  enums.yaml  interface.txt  ip.txt  ospf.txt  system.txt
mikrotik-model-generator/ros_model/caps-man/: Aaa.txt  AccessList.txt  ActualInterfaceConfiguration.txt  Channel.txt  Configuration.txt  Datapath.txt  Interface.txt  Manager.txt  Provisioning.txt  Radio.txt  Rates.txt  RegistrationTable.txt  RemoteCap.txt  Security.txt
mikrotik-model-generator/ros_model/interface/: Ethernet.txt  EthernetSwitch.txt  List.txt  Vlan.txt  Vxlan.txt  Wifi.txt
mikrotik-model-generator/ros_model/ip/: DhcpServer.txt  Pool.txt  ip.txt
mikrotik-model-generator/ros_model/ipv6/: Address.txt  Firewall.txt
mikrotik-model-generator/ros_model/routing/: Ospf.txt
mikrotik-model-generator/ros_model/system/: Health.txt  Package.txt
mikrotik-model-generator/src/: lib.rs
mikrotik-model-generator/src/macros/: mod.rs  test.rs
mikrotik-model-generator/src/model/: mod.rs
src/: ascii.rs  config_set.rs  error.rs  generator.rs  hwconfig.rs  lib.rs  repository.rs  resource.rs  util.rs  value.rs
src/model/: defaults.rs  enums.rs  mod.rs
