[package]
name = "mikrotik-model-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.33"
convert_case = "0.6.0"
proc-macro2 = "1.0.92"
syn = { version = "2.0.90", features = ["full"] }
regex = "1.11.1"
lazy_static = "1.5.0"
log = "0.4.22"